--- a/02Supply.ipynb
+++ b/02Supply.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "84df827e",
    "metadata": {},
    "outputs": [],
@@ -55,6 +55,10 @@
     "'''Systemic paths'''\n",
     "\n",
     "Load_path='./NYC_Network/'\n",
+    "\n",
+    "'''day'''\n",
+    "\n",
+    "day='2020-12-01'\n",
     "\n",
     "\n",
     "\n",
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "f80f0a52",
    "metadata": {},
    "outputs": [
@@ -150,50 +154,50 @@
        "      <td>D0</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.85735318757529, -73.92559318149429]</td>\n",
-       "      <td>892a100ae8fffff</td>\n",
-       "      <td>[40.85735318757529, -73.92559318149429]</td>\n",
-       "      <td>892a100ae8fffff</td>\n",
+       "      <td>[40.851950800234384, -73.92967768455331]</td>\n",
+       "      <td>892a100ae07ffff</td>\n",
+       "      <td>[40.851950800234384, -73.92967768455331]</td>\n",
+       "      <td>892a100ae07ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>D1</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.81672564793101, -73.96048635474924]</td>\n",
-       "      <td>892a1008c03ffff</td>\n",
-       "      <td>[40.81672564793101, -73.96048635474924]</td>\n",
-       "      <td>892a1008c03ffff</td>\n",
+       "      <td>[40.763763585662176, -73.96272121424846]</td>\n",
+       "      <td>892a100d687ffff</td>\n",
+       "      <td>[40.763763585662176, -73.96272121424846]</td>\n",
+       "      <td>892a100d687ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>D2</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.72552009875161, -74.00830230921224]</td>\n",
-       "      <td>892a1072c57ffff</td>\n",
-       "      <td>[40.72552009875161, -74.00830230921224]</td>\n",
-       "      <td>892a1072c57ffff</td>\n",
+       "      <td>[40.7882831770275, -73.9358260668239]</td>\n",
+       "      <td>892a100f2cbffff</td>\n",
+       "      <td>[40.7882831770275, -73.9358260668239]</td>\n",
+       "      <td>892a100f2cbffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>D3</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.79230724465317, -73.98310565091663]</td>\n",
-       "      <td>892a1008863ffff</td>\n",
-       "      <td>[40.79230724465317, -73.98310565091663]</td>\n",
-       "      <td>892a1008863ffff</td>\n",
+       "      <td>[40.776684780193754, -73.97392845953703]</td>\n",
+       "      <td>892a1008bb7ffff</td>\n",
+       "      <td>[40.776684780193754, -73.97392845953703]</td>\n",
+       "      <td>892a1008bb7ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>D4</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.77915384672378, -73.98044924503581]</td>\n",
-       "      <td>892a1008bbbffff</td>\n",
-       "      <td>[40.77915384672378, -73.98044924503581]</td>\n",
-       "      <td>892a1008bbbffff</td>\n",
+       "      <td>[40.841146630805085, -73.9378439088746]</td>\n",
+       "      <td>892a100aa83ffff</td>\n",
+       "      <td>[40.841146630805085, -73.9378439088746]</td>\n",
+       "      <td>892a100aa83ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -210,50 +214,50 @@
        "      <td>D505</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2875</td>\n",
-       "      <td>(40.83011475573099, -73.95457284997781)</td>\n",
-       "      <td>892a100aa63ffff</td>\n",
-       "      <td>(40.83011475573099, -73.95457284997781)</td>\n",
-       "      <td>892a100aa63ffff</td>\n",
+       "      <td>(40.779728795481155, -73.95905625713573)</td>\n",
+       "      <td>892a1008903ffff</td>\n",
+       "      <td>(40.779728795481155, -73.95905625713573)</td>\n",
+       "      <td>892a1008903ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>506</th>\n",
        "      <td>D506</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2876</td>\n",
-       "      <td>(40.79885307565972, -73.93622927143312)</td>\n",
-       "      <td>892a1008dbbffff</td>\n",
-       "      <td>(40.79885307565972, -73.93622927143312)</td>\n",
-       "      <td>892a1008dbbffff</td>\n",
+       "      <td>(40.78759793062824, -73.96150218435267)</td>\n",
+       "      <td>892a10089c3ffff</td>\n",
+       "      <td>(40.78759793062824, -73.96150218435267)</td>\n",
+       "      <td>892a10089c3ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>507</th>\n",
        "      <td>D507</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2877</td>\n",
-       "      <td>(40.734079205547125, -73.98510699874309)</td>\n",
-       "      <td>892a100d223ffff</td>\n",
-       "      <td>(40.734079205547125, -73.98510699874309)</td>\n",
-       "      <td>892a100d223ffff</td>\n",
+       "      <td>(40.86804545848781, -73.92170803364601)</td>\n",
+       "      <td>892a100a177ffff</td>\n",
+       "      <td>(40.86804545848781, -73.92170803364601)</td>\n",
+       "      <td>892a100a177ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>508</th>\n",
        "      <td>D508</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2878</td>\n",
-       "      <td>(40.73184224228762, -73.97004368864602)</td>\n",
-       "      <td>892a100d3d7ffff</td>\n",
-       "      <td>(40.73184224228762, -73.97004368864602)</td>\n",
-       "      <td>892a100d3d7ffff</td>\n",
+       "      <td>(40.80850924463485, -73.97088285837434)</td>\n",
+       "      <td>892a1008c6fffff</td>\n",
+       "      <td>(40.80850924463485, -73.97088285837434)</td>\n",
+       "      <td>892a1008c6fffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>509</th>\n",
        "      <td>D509</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2879</td>\n",
-       "      <td>(40.78455334482669, -73.97637674961783)</td>\n",
-       "      <td>892a1008b97ffff</td>\n",
-       "      <td>(40.78455334482669, -73.97637674961783)</td>\n",
-       "      <td>892a1008b97ffff</td>\n",
+       "      <td>(40.819769206993136, -73.94560074480687)</td>\n",
+       "      <td>892a100ab4bffff</td>\n",
+       "      <td>(40.819769206993136, -73.94560074480687)</td>\n",
+       "      <td>892a100ab4bffff</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -262,48 +266,48 @@
       ],
       "text/plain": [
        "    Driver_id Order_id  Step                                     Point  \\\n",
-       "0          D0     Idle  2520   [40.85735318757529, -73.92559318149429]   \n",
-       "1          D1     Idle  2520   [40.81672564793101, -73.96048635474924]   \n",
-       "2          D2     Idle  2520   [40.72552009875161, -74.00830230921224]   \n",
-       "3          D3     Idle  2520   [40.79230724465317, -73.98310565091663]   \n",
-       "4          D4     Idle  2520   [40.77915384672378, -73.98044924503581]   \n",
+       "0          D0     Idle  2520  [40.851950800234384, -73.92967768455331]   \n",
+       "1          D1     Idle  2520  [40.763763585662176, -73.96272121424846]   \n",
+       "2          D2     Idle  2520     [40.7882831770275, -73.9358260668239]   \n",
+       "3          D3     Idle  2520  [40.776684780193754, -73.97392845953703]   \n",
+       "4          D4     Idle  2520   [40.841146630805085, -73.9378439088746]   \n",
        "..        ...      ...   ...                                       ...   \n",
-       "505      D505     Idle  2875   (40.83011475573099, -73.95457284997781)   \n",
-       "506      D506     Idle  2876   (40.79885307565972, -73.93622927143312)   \n",
-       "507      D507     Idle  2877  (40.734079205547125, -73.98510699874309)   \n",
-       "508      D508     Idle  2878   (40.73184224228762, -73.97004368864602)   \n",
-       "509      D509     Idle  2879   (40.78455334482669, -73.97637674961783)   \n",
+       "505      D505     Idle  2875  (40.779728795481155, -73.95905625713573)   \n",
+       "506      D506     Idle  2876   (40.78759793062824, -73.96150218435267)   \n",
+       "507      D507     Idle  2877   (40.86804545848781, -73.92170803364601)   \n",
+       "508      D508     Idle  2878   (40.80850924463485, -73.97088285837434)   \n",
+       "509      D509     Idle  2879  (40.819769206993136, -73.94560074480687)   \n",
        "\n",
        "                Grid                          Reposition_Point  \\\n",
-       "0    892a100ae8fffff   [40.85735318757529, -73.92559318149429]   \n",
-       "1    892a1008c03ffff   [40.81672564793101, -73.96048635474924]   \n",
-       "2    892a1072c57ffff   [40.72552009875161, -74.00830230921224]   \n",
-       "3    892a1008863ffff   [40.79230724465317, -73.98310565091663]   \n",
-       "4    892a1008bbbffff   [40.77915384672378, -73.98044924503581]   \n",
+       "0    892a100ae07ffff  [40.851950800234384, -73.92967768455331]   \n",
+       "1    892a100d687ffff  [40.763763585662176, -73.96272121424846]   \n",
+       "2    892a100f2cbffff     [40.7882831770275, -73.9358260668239]   \n",
+       "3    892a1008bb7ffff  [40.776684780193754, -73.97392845953703]   \n",
+       "4    892a100aa83ffff   [40.841146630805085, -73.9378439088746]   \n",
        "..               ...                                       ...   \n",
-       "505  892a100aa63ffff   (40.83011475573099, -73.95457284997781)   \n",
-       "506  892a1008dbbffff   (40.79885307565972, -73.93622927143312)   \n",
-       "507  892a100d223ffff  (40.734079205547125, -73.98510699874309)   \n",
-       "508  892a100d3d7ffff   (40.73184224228762, -73.97004368864602)   \n",
-       "509  892a1008b97ffff   (40.78455334482669, -73.97637674961783)   \n",
+       "505  892a1008903ffff  (40.779728795481155, -73.95905625713573)   \n",
+       "506  892a10089c3ffff   (40.78759793062824, -73.96150218435267)   \n",
+       "507  892a100a177ffff   (40.86804545848781, -73.92170803364601)   \n",
+       "508  892a1008c6fffff   (40.80850924463485, -73.97088285837434)   \n",
+       "509  892a100ab4bffff  (40.819769206993136, -73.94560074480687)   \n",
        "\n",
        "     Reposition_Grid  \n",
-       "0    892a100ae8fffff  \n",
-       "1    892a1008c03ffff  \n",
-       "2    892a1072c57ffff  \n",
-       "3    892a1008863ffff  \n",
-       "4    892a1008bbbffff  \n",
+       "0    892a100ae07ffff  \n",
+       "1    892a100d687ffff  \n",
+       "2    892a100f2cbffff  \n",
+       "3    892a1008bb7ffff  \n",
+       "4    892a100aa83ffff  \n",
        "..               ...  \n",
-       "505  892a100aa63ffff  \n",
-       "506  892a1008dbbffff  \n",
-       "507  892a100d223ffff  \n",
-       "508  892a100d3d7ffff  \n",
-       "509  892a1008b97ffff  \n",
+       "505  892a1008903ffff  \n",
+       "506  892a10089c3ffff  \n",
+       "507  892a100a177ffff  \n",
+       "508  892a1008c6fffff  \n",
+       "509  892a100ab4bffff  \n",
        "\n",
        "[510 rows x 7 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "51039931",
    "metadata": {},
    "outputs": [
@@ -382,9 +386,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\yyan2437\\AppData\\Local\\Temp/ipykernel_5148/2967941334.py:95: MatplotlibDeprecationWarning: Passing the fontdict parameter of _set_ticklabels() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "C:\\Users\\yyan2437\\AppData\\Local\\Temp/ipykernel_5148/2041916973.py:95: MatplotlibDeprecationWarning: Passing the fontdict parameter of _set_ticklabels() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  axs.set_xticklabels(['','07:00', '07:10','07:20','07:30','07:40','07:50',\\\n",
-      "C:\\Users\\yyan2437\\AppData\\Local\\Temp/ipykernel_5148/2967941334.py:95: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\yyan2437\\AppData\\Local\\Temp/ipykernel_5148/2041916973.py:95: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axs.set_xticklabels(['','07:00', '07:10','07:20','07:30','07:40','07:50',\\\n"
      ]
     },
@@ -511,9 +515,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea11964f",
+   "metadata": {},
+   "source": [
+    "## 04 Saving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f15c4c6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Driver_df.to_csv(os.path.join('Driver_df_'+str(day)+'.csv'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b4647bd",
+   "id": "8e500b86",
    "metadata": {},
    "outputs": [],
    "source": []
