--- a/02Supply.ipynb
+++ b/02Supply.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "e5228fbf",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "84df827e",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "f80f0a52",
    "metadata": {},
    "outputs": [
@@ -154,50 +154,50 @@
        "      <td>D0</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.851950800234384, -73.92967768455331]</td>\n",
-       "      <td>892a100ae07ffff</td>\n",
-       "      <td>[40.851950800234384, -73.92967768455331]</td>\n",
-       "      <td>892a100ae07ffff</td>\n",
+       "      <td>[40.819426235372546, -73.9584474749269]</td>\n",
+       "      <td>892a1008c13ffff</td>\n",
+       "      <td>[40.819426235372546, -73.9584474749269]</td>\n",
+       "      <td>892a1008c13ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>D1</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.763763585662176, -73.96272121424846]</td>\n",
-       "      <td>892a100d687ffff</td>\n",
-       "      <td>[40.763763585662176, -73.96272121424846]</td>\n",
-       "      <td>892a100d687ffff</td>\n",
+       "      <td>[40.755206123242296, -73.98593486620216]</td>\n",
+       "      <td>892a100d66bffff</td>\n",
+       "      <td>[40.755206123242296, -73.98593486620216]</td>\n",
+       "      <td>892a100d66bffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>D2</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.7882831770275, -73.9358260668239]</td>\n",
-       "      <td>892a100f2cbffff</td>\n",
-       "      <td>[40.7882831770275, -73.9358260668239]</td>\n",
-       "      <td>892a100f2cbffff</td>\n",
+       "      <td>[40.73138093237354, -73.98714068654695]</td>\n",
+       "      <td>892a100d22fffff</td>\n",
+       "      <td>[40.73138093237354, -73.98714068654695]</td>\n",
+       "      <td>892a100d22fffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>D3</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.776684780193754, -73.97392845953703]</td>\n",
-       "      <td>892a1008bb7ffff</td>\n",
-       "      <td>[40.776684780193754, -73.97392845953703]</td>\n",
-       "      <td>892a1008bb7ffff</td>\n",
+       "      <td>[40.779728795481155, -73.95905625713573]</td>\n",
+       "      <td>892a1008903ffff</td>\n",
+       "      <td>[40.779728795481155, -73.95905625713573]</td>\n",
+       "      <td>892a1008903ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>D4</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2520</td>\n",
-       "      <td>[40.841146630805085, -73.9378439088746]</td>\n",
-       "      <td>892a100aa83ffff</td>\n",
-       "      <td>[40.841146630805085, -73.9378439088746]</td>\n",
-       "      <td>892a100aa83ffff</td>\n",
+       "      <td>[40.83292993268151, -73.94824960396497]</td>\n",
+       "      <td>892a100aa0fffff</td>\n",
+       "      <td>[40.83292993268151, -73.94824960396497]</td>\n",
+       "      <td>892a100aa0fffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -214,50 +214,50 @@
        "      <td>D505</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2875</td>\n",
-       "      <td>(40.779728795481155, -73.95905625713573)</td>\n",
-       "      <td>892a1008903ffff</td>\n",
-       "      <td>(40.779728795481155, -73.95905625713573)</td>\n",
-       "      <td>892a1008903ffff</td>\n",
+       "      <td>[40.752507137720634, -73.98796942281288]</td>\n",
+       "      <td>892a100d2d3ffff</td>\n",
+       "      <td>[40.752507137720634, -73.98796942281288]</td>\n",
+       "      <td>892a100d2d3ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>506</th>\n",
        "      <td>D506</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2876</td>\n",
-       "      <td>(40.78759793062824, -73.96150218435267)</td>\n",
-       "      <td>892a10089c3ffff</td>\n",
-       "      <td>(40.78759793062824, -73.96150218435267)</td>\n",
-       "      <td>892a10089c3ffff</td>\n",
+       "      <td>[40.75825100161537, -73.97107010462192]</td>\n",
+       "      <td>892a100d607ffff</td>\n",
+       "      <td>[40.75825100161537, -73.97107010462192]</td>\n",
+       "      <td>892a100d607ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>507</th>\n",
        "      <td>D507</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2877</td>\n",
-       "      <td>(40.86804545848781, -73.92170803364601)</td>\n",
-       "      <td>892a100a177ffff</td>\n",
-       "      <td>(40.86804545848781, -73.92170803364601)</td>\n",
-       "      <td>892a100a177ffff</td>\n",
+       "      <td>[40.87615025061996, -73.91557748995153]</td>\n",
+       "      <td>892a100a113ffff</td>\n",
+       "      <td>[40.87615025061996, -73.91557748995153]</td>\n",
+       "      <td>892a100a113ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>508</th>\n",
        "      <td>D508</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2878</td>\n",
-       "      <td>(40.80850924463485, -73.97088285837434)</td>\n",
-       "      <td>892a1008c6fffff</td>\n",
-       "      <td>(40.80850924463485, -73.97088285837434)</td>\n",
-       "      <td>892a1008c6fffff</td>\n",
+       "      <td>[40.79052647560961, -73.95090545765932]</td>\n",
+       "      <td>892a1008d67ffff</td>\n",
+       "      <td>[40.79052647560961, -73.95090545765932]</td>\n",
+       "      <td>892a1008d67ffff</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>509</th>\n",
        "      <td>D509</td>\n",
        "      <td>Idle</td>\n",
        "      <td>2879</td>\n",
-       "      <td>(40.819769206993136, -73.94560074480687)</td>\n",
-       "      <td>892a100ab4bffff</td>\n",
-       "      <td>(40.819769206993136, -73.94560074480687)</td>\n",
-       "      <td>892a100ab4bffff</td>\n",
+       "      <td>[40.801096680764914, -73.95131208247851]</td>\n",
+       "      <td>892a1008d57ffff</td>\n",
+       "      <td>[40.801096680764914, -73.95131208247851]</td>\n",
+       "      <td>892a1008d57ffff</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -266,48 +266,48 @@
       ],
       "text/plain": [
        "    Driver_id Order_id  Step                                     Point  \\\n",
-       "0          D0     Idle  2520  [40.851950800234384, -73.92967768455331]   \n",
-       "1          D1     Idle  2520  [40.763763585662176, -73.96272121424846]   \n",
-       "2          D2     Idle  2520     [40.7882831770275, -73.9358260668239]   \n",
-       "3          D3     Idle  2520  [40.776684780193754, -73.97392845953703]   \n",
-       "4          D4     Idle  2520   [40.841146630805085, -73.9378439088746]   \n",
+       "0          D0     Idle  2520   [40.819426235372546, -73.9584474749269]   \n",
+       "1          D1     Idle  2520  [40.755206123242296, -73.98593486620216]   \n",
+       "2          D2     Idle  2520   [40.73138093237354, -73.98714068654695]   \n",
+       "3          D3     Idle  2520  [40.779728795481155, -73.95905625713573]   \n",
+       "4          D4     Idle  2520   [40.83292993268151, -73.94824960396497]   \n",
        "..        ...      ...   ...                                       ...   \n",
-       "505      D505     Idle  2875  (40.779728795481155, -73.95905625713573)   \n",
-       "506      D506     Idle  2876   (40.78759793062824, -73.96150218435267)   \n",
-       "507      D507     Idle  2877   (40.86804545848781, -73.92170803364601)   \n",
-       "508      D508     Idle  2878   (40.80850924463485, -73.97088285837434)   \n",
-       "509      D509     Idle  2879  (40.819769206993136, -73.94560074480687)   \n",
+       "505      D505     Idle  2875  [40.752507137720634, -73.98796942281288]   \n",
+       "506      D506     Idle  2876   [40.75825100161537, -73.97107010462192]   \n",
+       "507      D507     Idle  2877   [40.87615025061996, -73.91557748995153]   \n",
+       "508      D508     Idle  2878   [40.79052647560961, -73.95090545765932]   \n",
+       "509      D509     Idle  2879  [40.801096680764914, -73.95131208247851]   \n",
        "\n",
        "                Grid                          Reposition_Point  \\\n",
-       "0    892a100ae07ffff  [40.851950800234384, -73.92967768455331]   \n",
-       "1    892a100d687ffff  [40.763763585662176, -73.96272121424846]   \n",
-       "2    892a100f2cbffff     [40.7882831770275, -73.9358260668239]   \n",
-       "3    892a1008bb7ffff  [40.776684780193754, -73.97392845953703]   \n",
-       "4    892a100aa83ffff   [40.841146630805085, -73.9378439088746]   \n",
+       "0    892a1008c13ffff   [40.819426235372546, -73.9584474749269]   \n",
+       "1    892a100d66bffff  [40.755206123242296, -73.98593486620216]   \n",
+       "2    892a100d22fffff   [40.73138093237354, -73.98714068654695]   \n",
+       "3    892a1008903ffff  [40.779728795481155, -73.95905625713573]   \n",
+       "4    892a100aa0fffff   [40.83292993268151, -73.94824960396497]   \n",
        "..               ...                                       ...   \n",
-       "505  892a1008903ffff  (40.779728795481155, -73.95905625713573)   \n",
-       "506  892a10089c3ffff   (40.78759793062824, -73.96150218435267)   \n",
-       "507  892a100a177ffff   (40.86804545848781, -73.92170803364601)   \n",
-       "508  892a1008c6fffff   (40.80850924463485, -73.97088285837434)   \n",
-       "509  892a100ab4bffff  (40.819769206993136, -73.94560074480687)   \n",
+       "505  892a100d2d3ffff  [40.752507137720634, -73.98796942281288]   \n",
+       "506  892a100d607ffff   [40.75825100161537, -73.97107010462192]   \n",
+       "507  892a100a113ffff   [40.87615025061996, -73.91557748995153]   \n",
+       "508  892a1008d67ffff   [40.79052647560961, -73.95090545765932]   \n",
+       "509  892a1008d57ffff  [40.801096680764914, -73.95131208247851]   \n",
        "\n",
        "     Reposition_Grid  \n",
-       "0    892a100ae07ffff  \n",
-       "1    892a100d687ffff  \n",
-       "2    892a100f2cbffff  \n",
-       "3    892a1008bb7ffff  \n",
-       "4    892a100aa83ffff  \n",
+       "0    892a1008c13ffff  \n",
+       "1    892a100d66bffff  \n",
+       "2    892a100d22fffff  \n",
+       "3    892a1008903ffff  \n",
+       "4    892a100aa0fffff  \n",
        "..               ...  \n",
-       "505  892a1008903ffff  \n",
-       "506  892a10089c3ffff  \n",
-       "507  892a100a177ffff  \n",
-       "508  892a1008c6fffff  \n",
-       "509  892a100ab4bffff  \n",
+       "505  892a100d2d3ffff  \n",
+       "506  892a100d607ffff  \n",
+       "507  892a100a113ffff  \n",
+       "508  892a1008d67ffff  \n",
+       "509  892a1008d57ffff  \n",
        "\n",
        "[510 rows x 7 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
     "\n",
     "        Added_item['Grid']=str(random.choice(Grid_list))\n",
     "\n",
-    "        Added_item['Point']=h3.h3_to_geo(Added_item['Grid'])\n",
+    "        Added_item['Point']=[p for p in h3.h3_to_geo(Added_item['Grid'])]\n",
     "\n",
     "        Added_item['Reposition_Point']=Added_item['Point']\n",
     "\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "51039931",
    "metadata": {},
    "outputs": [
@@ -386,9 +386,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\yyan2437\\AppData\\Local\\Temp/ipykernel_5148/2041916973.py:95: MatplotlibDeprecationWarning: Passing the fontdict parameter of _set_ticklabels() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
+      "C:\\Users\\yyan2437\\AppData\\Local\\Temp/ipykernel_7248/2041916973.py:95: MatplotlibDeprecationWarning: Passing the fontdict parameter of _set_ticklabels() positionally is deprecated since Matplotlib 3.3; the parameter will become keyword-only two minor releases later.\n",
       "  axs.set_xticklabels(['','07:00', '07:10','07:20','07:30','07:40','07:50',\\\n",
-      "C:\\Users\\yyan2437\\AppData\\Local\\Temp/ipykernel_5148/2041916973.py:95: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\yyan2437\\AppData\\Local\\Temp/ipykernel_7248/2041916973.py:95: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axs.set_xticklabels(['','07:00', '07:10','07:20','07:30','07:40','07:50',\\\n"
      ]
     },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "f15c4c6c",
    "metadata": {},
    "outputs": [],
